полностью востановлен поток авторизации по jwt при коммуникации по websocket